# training-setup

./: .ansible-lint  .env_dist  .gitignore  .yamllint  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.yml
.ssh/: ansible-ssh-config
etc/digitalocean/: user-data.yml.j2
inventory/: do_hosts.yml
inventory/group_vars/all/: base.yml  dns.yml  droplet.yml  students.yml
playbooks/: bootstrap.yml  destroy.yml  inventory.yml
plugins/filter/: do_keys_by_username.yml  droplets.py  flatten_ssh_keys.yml  get_ssh_keys.yml  parse_droplets.yml  ssh_keys.py
requirements/: collections.yml  requirements.txt  roles.yml
